[package]
name = "flightctrl"
version = "0.0.1"
authors = ["ivmarkov"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "A demo binary crate for the ESP32 and ESP-IDF, which connects to WiFi, Ethernet, drives a small HTTP server and draws on a LED screen"
repository = "https://github.com/psiphi75/flightctrl-rust"
license = "Apache-2.0"
readme = "README.md"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]

# Enable this feature for the build to use the PlatformIO tooling instead of the native ESP-IDF tooling under the hood
pio = ["esp-idf-sys/pio"]

experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.31", features = ["binstart"] }
esp-idf-svc = "0.40"
esp-idf-hal = "0.36"
embedded-svc = "0.20"
embedded-hal = "0.2"
mpu9250-i2c = { version = "0.6" }


[build-dependencies]
embuild = "0.28.2"
anyhow = "1"
